Fixed linebreaks on PrivacyPage

--- a/src/pages/PrivacyTerms.css
+++ b/src/pages/PrivacyTerms.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    height: 96vh;
     margin-top: 63px;
 }
 
